# rust_trainning

./: cargo.toml
guess_game/: Cargo.toml
guess_game/src/: main.rs
kv/: Cargo.toml  README.md  abi.proto
kv/persist.db/: db
kv/src/: client.rs  server.rs
kv/src/pb/: mod.rs
minigrep/src/: lib.rs  main.rs
pow/: Cargo.toml
pow/src/: client.rs  pow.rs  server.rs
pow/src/pb/: abi.rs
v8_live/: Cargo.toml
v8_live/examples/: basic.rs  runtime.rs
v8_live/src/: lib.rs  state.rs  utils.rs
v8_live/src/extensions/: bootstrap.js  mod.rs
