[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
dashmap = "5.4.0"
futures = "0.3.25"
prost = "0.11.3"
sled = "0.34.7"
tokio = { version = "1.23.0", features=["net", "macros", "rt-multi-thread"] }
tokio-util = { version ="0.7.4", features=["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features=["env-filter"] }

[build-dependencies]
prost-build = "0.11.3"


