[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.66"
blake3 = "1.3.3"
futures = "0.3.25"
hex = "0.4.3"
prost = "0.11.3"
rayon = "1.6.1"
tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"

[build-dependencies] 
tonic-build = "0.8.4"
